# ssl_outthere

./: .gitignore  LICENSE  README.md  compute_multiple_embeddings.sh  plot_embedding.ipynb  pyproject.toml  setup.py  user_pip_packages_backup.txt
encoder_image/astrodino/: compute_embeddings.py
encoder_image/astrodino/model/: check_train_metric.ipynb
encoder_image/astrodino/morphology_classification/: embed_galaxy_zoo.py  embed_galaxy_zoo.sh
encoder_image/astrodino/morphology_classification/morphology_utils/: cross_match.py
encoder_image/astrodino/photometry/: embed_flux.sh  photometry.ipynb
encoder_image/astrodino/train/: config_default.yaml  trainer.py
encoder_image/astrodino/train/configs/: astrodino.yaml  astrodino_desi_vitb.yaml  astrodino_jwst_vitl_f115w.yaml  astrodino_jwst_vitl_f150w.yaml
encoder_image/astrodino/train/data/: augmentations.py
encoder_image/astrodino/train/sbatch/: eval.sh  train_dev.sh  train_jwst.sh
encoder_image/mocov2/: compute_multiple_embeddings.sh
encoder_spectrum/specformer/1d_transformer/: specformer.py  specformer.yaml  trainer.py
image_encoder/astrodino/morphology_classification/: morphology_classification.ipynb  sbatch_cross_match.sh
image_encoder/astrodino/photometry/: embed_flux.py  embed_flux_local.sh
image_encoder/mocov2/: compute_embeddings.py
images/: test.ipynb
images/CLEAR/: check_image_and_spectra.ipynb  clear_download.py
images/OUTTHERE/: check_image_and_spectra.ipynb  outthere_download.py
images/cosmos_2025/: check_dataset.ipynb  cutout_export.py  cutout_export_parallel.py  sbatch_cutout_parallel.sh
ssl_outthere.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+9 files in other folders)
